--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,12 @@
-beautifulsoup4==4.9.3
+numpy==1.20.3
+pandas==1.1.5
+python-dateutil==2.8.1
 pytz==2021.1
-selenium==3.141.0
-soupsieve==2.2.1
-urllib3==1.26.4
-scikit-learn==0.24.2
+six==1.16.0
 gensim==4.0.1
-word2vec==0.11.1
-pyLDAvis==3.3.1
 matplotlib==3.4.2
+scikit-learn==0.24.2
 soynlp==0.0.493
-tqdm==4.61.0
 kiwipiepy==0.9.2
+tqdm==4.61.0
 wordcloud==1.8.1
-Counter==1.0.0
