--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 numpy==1.20.3
-pandas==1.1.5
+pandas==1.2.4
 python-dateutil==2.8.1
 pytz==2021.1
 six==1.16.0
@@ -9,4 +9,4 @@ scikit-learn==0.24.2
 soynlp==0.0.493
 kiwipiepy==0.9.2
 tqdm==4.61.0
-wordcloud==1.8.1
+pyLDAvis==3.3.1
